# home_work_6

./: .env.sample  blogdata.json  data.json  info.txt  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_slug.py  0003_alter_blog_slug.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_contact.py  0004_alter_contact_last_name_version.py  0005_product_owner.py  0006_alter_product_options_product_is_published.py
catalog/tamplatetags/: my_tags.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  home.html  product.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
users/templates/users/: login.html  register.html  user_form.html  verification.html
