[tool.poetry]
name = "home-work-6"
version = "0.1.0"
description = ""
authors = ["Oleg Smirnov <oleg.smirnoff505@yandex.ru>"]
readme = "README.md"
packages = [{include = "home_work_6"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
