[tool.poetry]
name = "home-work-6"
version = "0.1.0"
description = ""
authors = ["Oleg Smirnov <oleg.smirnoff505@yandex.ru>"]
readme = "README.md"
packages = [{include = "home_work_6"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
pillow = "^10.1.0"
ipython = "^8.17.2"
psycopg2-binary = "^2.9.9"
pytils = "^0.4.1"
redis = "^5.0.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
